fix fonts, fiox index layout for readability, animations

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,7 +18,8 @@ html, body {
 body {
   background-color: #006bb6;
 	color: #fff;
-	font-family: 'Noto Sans', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 500;
   font-size: 1.5rem;
 	margin: 0;
   display: flex;
@@ -98,19 +99,19 @@ a:hover {
 .post-list-title {
   font-size: 1.75rem;
   font-weight: bold;
-  border-bottom: 5px solid #ed174c;
+  border-left: 5px solid #ed174c;
+  display: inline-block;
 }
 
 .post-list {
   list-style-type: none;
-  padding-left: 0;
 }
 
 .post-list-item {
   font-family: '76ersreg';
-  font-size: 1.5rem;
-  text-shadow: 1px 1px #ed174c;
-  line-height: 1.5rem;
+  font-size: 2rem;
+  text-shadow: 1.5px 1.5px #ed174c;
+  line-height: 2rem;
   page-break-inside: avoid;
   break-inside: avoid;
 }
@@ -120,20 +121,26 @@ a:hover {
 }
 
 .post-list-item a:hover {
-  text-shadow: 1px 1px#fff;
+  text-shadow: 1.5px 1.5px#fff;
 }
 
 .post-list-item-date {
-  font-size: 1.1rem;
+  font-size: 1.5rem;
+}
+
+@keyframes stars-spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
 }
 
 .stars-img {
   width: 150px;
-  transition: transform 1s ease-in-out;
+  /* transition: transform 1s ease-in-out; */
+  animation: stars-spin 15s linear infinite;
 }
 
 .stars-img:hover {
-  transform: rotate(-90deg);
+  /* transform: rotate(-90deg); */
 }
 
 .ttp {
@@ -250,18 +257,42 @@ a:hover {
   cursor: pointer;
 }
 
+.post-list li::before {
+  font-family: "Font Awesome 5 Free";
+  font-size: 1rem;
+  content: "\f434";
+  color: #fff;
+  text-shadow: 1px 1px #ed174c;
+  font-weight: bold; /* If you want it to be bold */
+  display: inline-block; /* Needed to add space between the bullet and the text */
+  width: 2em; /* Also needed for space (tweak if needed) */
+  margin-left: -2em;
+  
+}
+
+.post-list li:hover::before {
+  animation: bounce 0.3s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+}
+
+
+@keyframes bounce {
+  from { transform: translate3d(0,0,0); }
+  to { transform: translate3d(0,2rem,0); }
+
+}
+
 
 @media (min-width: 768px) {
   .page-title {
     font-size: 12rem;
   }
   .post-list {
-    border-left: 5px solid #ed174c;
+    /* border-left: 5px solid #ed174c; */
     padding-left: 1.5rem;
     columns: 2;
-  }
-  .post-list-title {
-    border-bottom: none;
+    list-style-type: none;
   }
   .shout-total {
     font-size: 5rem;
